kubernetes/apps/kubevirt/namespace-kubevirt-manager.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: kubevirt-manager
  labels:
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
