kubernetes/apps/kubevirt/networkpolicy-kubevirt-manager.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: kubevirt-manager
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-kube-api
  namespace: kubevirt-manager
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/controller: kubevirt-manager
  egress:
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
