kubernetes/apps/kubevirt/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: kubevirt
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-dns
  namespace: kubevirt
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - port: 53
          protocol: UDP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-prometheus-scrape
  namespace: kubevirt
spec:
  podSelector:
    matchLabels:
      prometheus.kubevirt.io: "true"
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: prometheus
          podSelector:
            matchLabels:
              app.kubernetes.io/name: prometheus
      ports:
        - port: 8443
          protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: virt-operator
  namespace: kubevirt
spec:
  endpointSelector:
    matchLabels:
      kubevirt.io: virt-operator
  egress:
    - toEntities:
        - kube-apiserver
  ingress:
    - fromEntities:
        - kube-apiserver
        - remote-node
        - host
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: virt-api
  namespace: kubevirt
spec:
  endpointSelector:
    matchLabels:
      kubevirt.io: virt-api
  egress:
    - toEntities:
        - kube-apiserver
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kubevirt
            kubevirt.io: virt-handler
      toPorts:
        - ports:
            - port: "8186"
              protocol: TCP
  ingress:
    - fromEntities:
        - kube-apiserver
        - remote-node
        - host
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: virt-controller
  namespace: kubevirt
spec:
  endpointSelector:
    matchLabels:
      kubevirt.io: virt-controller
  egress:
    - toEntities:
        - kube-apiserver
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: virt-exportproxy
  namespace: kubevirt
spec:
  endpointSelector:
    matchLabels:
      kubevirt.io: virt-exportproxy
  egress:
    - toEntities:
        - kube-apiserver
  ingress:
    - fromEntities:
        - kube-apiserver
        - remote-node
        - host
      toPorts:
        - ports:
            - port: "8443"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: virt-handler
  namespace: kubevirt
spec:
  endpointSelector:
    matchLabels:
      kubevirt.io: virt-handler
  egress:
    - toEntities:
        - kube-apiserver
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kubevirt
            kubevirt.io: virt-handler
  ingress:
    - fromEntities:
        - kube-apiserver
        - remote-node
        - host
      toPorts:
        - ports:
            - port: "8186"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kubevirt
            kubevirt.io: virt-api
      toPorts:
        - ports:
            - port: "8186"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kubevirt
            kubevirt.io: virt-handler
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: virt-operator-strategy-dumper
  namespace: kubevirt
spec:
  endpointSelector:
    matchLabels:
      kubevirt.io: virt-operator-strategy-dumper
  egress:
    - toEntities:
        - kube-apiserver
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: virt-template-apiserver
  namespace: kubevirt
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: virt-template
      control-plane: apiserver
  egress:
    - toEntities:
        - kube-apiserver
  ingress:
    - fromEntities:
        - kube-apiserver
        - remote-node
        - host
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: cdi
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-dns
  namespace: cdi
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - port: 53
          protocol: UDP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-prometheus-scrape
  namespace: cdi
spec:
  podSelector:
    matchLabels:
      prometheus.cdi.kubevirt.io: "true"
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: prometheus
          podSelector:
            matchLabels:
              app.kubernetes.io/name: prometheus
      ports:
        - port: 8443
          protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cdi-operator
  namespace: cdi
spec:
  endpointSelector:
    matchLabels:
      name: cdi-operator
  egress:
    - toEntities:
        - kube-apiserver
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cdi-apiserver
  namespace: cdi
spec:
  endpointSelector:
    matchLabels:
      cdi.kubevirt.io: cdi-apiserver
  egress:
    - toEntities:
        - kube-apiserver
  ingress:
    - fromEntities:
        - kube-apiserver
        - remote-node
        - host
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cdi-controller
  namespace: cdi
spec:
  endpointSelector:
    matchLabels:
      cdi.kubevirt.io: cdi-deployment
  egress:
    - toEntities:
        - kube-apiserver
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cdi-uploadproxy
  namespace: cdi
spec:
  endpointSelector:
    matchLabels:
      cdi.kubevirt.io: cdi-uploadproxy
  egress:
    - toEntities:
        - kube-apiserver
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: vms
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-migration
  namespace: vms
spec:
  podSelector:
    matchLabels:
      kubevirt.io: virt-launcher
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              kubevirt.io: virt-launcher
      ports:
        - port: 49152
          protocol: TCP
        - port: 49153
          protocol: TCP
  egress:
    - to:
        - podSelector:
            matchLabels:
              kubevirt.io: virt-launcher
      ports:
        - port: 49152
          protocol: TCP
        - port: 49153
          protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-apt-egress
  namespace: vms
spec:
  endpointSelector:
    matchLabels:
      vm.kubevirt.io/os: debian
  egress:
    - toCIDRSet:
        - cidr: 10.96.0.10/32
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
          rules:
            dns:
              - matchPattern: "*.debian.org"
    - toFQDNs:
        - matchPattern: "*.debian.org"
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-importer-egress
  namespace: vms
spec:
  endpointSelector:
    matchLabels:
      cdi.kubevirt.io: importer
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s:k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
